--- a/fish/Game.html
+++ b/fish/Game.html
@@ -47,7 +47,6 @@
         }
     </style>
 
-
 </head>
 
 <body>
@@ -58,8 +57,10 @@
         </div>
     </div>
     </div>
+    <script type="text/javascript" src="./js/ane.js"></script>
     <script type="text/javascript" src="./js/main.js"></script>
     <script type="text/javascript" src="./js/background.js"></script>
+
 </body>
 
 </html>
