--- a/fish/Game.html
+++ b/fish/Game.html
@@ -57,10 +57,13 @@
         </div>
     </div>
     </div>
+    <script type="text/javascript" src="./js/tool.js"></script>
     <script type="text/javascript" src="./js/ane.js"></script>
     <script type="text/javascript" src="./js/main.js"></script>
     <script type="text/javascript" src="./js/background.js"></script>
-
+    <script type="text/javascript" src="./js/fruit.js"></script>
+    <script type="text/javascript" src="./js/mom.js"></script>
+    <script type="text/javascript" src="./js/baby.js"></script>
 </body>
 
 </html>
