--- a/fish/Game.html
+++ b/fish/Game.html
@@ -64,6 +64,8 @@
     <script type="text/javascript" src="./js/fruit.js"></script>
     <script type="text/javascript" src="./js/mom.js"></script>
     <script type="text/javascript" src="./js/baby.js"></script>
+    <script type="text/javascript" src="./js/data.js"></script>
+    <script type="text/javascript" src="./js/wave.js"></script>
 </body>
 
 </html>
